[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drf"
version = "0.1.0"
description = "Python library for DRF (Decision Reasoning Format) and CRF (Context Reasoning Format)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "reasoning-formats contributors" }
]
keywords = ["drf", "crf", "decision", "reasoning", "format", "specification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/reasoning-formats/drf-py"
Documentation = "https://github.com/reasoning-formats/reasoning-formats"
Repository = "https://github.com/reasoning-formats/drf-py"

[tool.hatch.build.targets.wheel]
packages = ["src/drf", "src/crf"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
